yanl/examples/t1/fail/apel_de_functie.yanl
# Functiile si procedurile trebuie apelate cu numar corect de parametri

program dude;
function f(x:integer; y:boolean; z:char):real
begin
 f := f(x+1, y, z);
end;

begin
  writereal(readinteger); #promovare automata a parametrului
  writereal(f(1, 2));
end.